--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
+
 // TYPOGRAPHY
 $weights: (
   "bold": 700,
@@ -18,6 +20,9 @@ $weights: (
 
 @mixin h1-large {
   @include headers(10rem, 10rem);
+  @include respond-to("mobile") {
+    @include headers(5.2rem, 5.2rem);
+  }
 }
 
 @mixin h1-small {
@@ -26,6 +31,9 @@ $weights: (
 
 @mixin h2 {
   @include headers(4.8rem, 4.8rem);
+  @include respond-to("mobile") {
+    @include headers(3.2rem, 3.2rem);
+  }
 }
 
 @mixin h3 {
@@ -34,8 +42,14 @@ $weights: (
 
 @mixin body1 {
   @include body(1.8rem, 2.8rem);
+  @include respond-to("mobile") {
+    @include body(1.5rem, 2.5rem);
+  }
 }
 
 @mixin body2 {
   @include body(1.5rem, 2.5rem);
+  @include respond-to("mobile") {
+    @include body(1.3rem, 2.3rem);
+  }
 }
