--- a/src/styles/components/_feature.scss
+++ b/src/styles/components/_feature.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  .feature__icon {
+  &__icon {
     width: 22%;
     margin-bottom: 0.8rem;
     img {
@@ -10,7 +10,7 @@
     }
   }
 
-  .feature__content {
+  &__content {
     text-align: center;
     .feature__title {
       @include h3;
