--- a/src/styles/components/_story.scss
+++ b/src/styles/components/_story.scss
@@ -3,16 +3,15 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-
   position: relative;
 
-  .story__quotes {
+  &__quotes {
     position: absolute;
     top: -3em;
     z-index: 1;
   }
 
-  .story__content {
+  &__content {
     position: relative;
     z-index: 2;
     .story__description {
