--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -16,3 +16,10 @@ $border-color: #c4fffe;
 
 // TYPOGRAPHIES
 $font-main: "Livvic", sans-serif;
+
+// PADDINGS
+$p-x: (
+  "mobile": 24px,
+  "tablet": 40px,
+  "desktop": 165px,
+);
